# DPP-template

./: README.md  pyproject.toml
docs/: project.md
notebooks/: 01_exploration.ipynb
src/dpp/: data.py
